--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "jquery": "^3.6.1",
+    "jsdom": "^20.0.1",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "react-scroll": "^1.8.7",
     "sass": "^1.55.0",
