--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
+    "embla-carousel": "^7.0.3",
+    "embla-carousel-react": "^7.0.3",
     "jquery": "^3.6.1",
     "jsdom": "^20.0.1",
+    "keen-slider": "^6.8.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
