--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.2",
     "embla-carousel": "^7.0.3",
     "embla-carousel-react": "^7.0.3",
+    "firebase": "^9.13.0",
     "jquery": "^3.6.1",
     "jsdom": "^20.0.1",
     "keen-slider": "^6.8.2",
