--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
     "react-scroll": "^1.8.7",
