--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "tanmaysachinfoundation",
   "version": "0.1.0",
   "private": true,
+  "browser": {
+    "fs": false
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build && next export",
@@ -10,19 +13,14 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.2",
-    "embla-carousel": "^7.0.3",
-    "embla-carousel-react": "^7.0.3",
+    "@sendgrid/mail": "^7.7.0",
     "firebase": "^9.13.0",
-    "jquery": "^3.6.1",
-    "jsdom": "^20.0.1",
-    "keen-slider": "^6.8.2",
     "next": "12.3.1",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-firebase-hooks": "^5.0.3",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
-    "react-scroll": "^1.8.7",
     "sass": "^1.55.0",
     "yarn": "^1.22.19"
   },
