--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,15 @@
 {
-    "routes" : [
-        {
-            "src" : "/api/mail.js",
-            "methods" : [
-                "POST",
-                "GET"
-            ],
-            "dest" : "/api/mail.js"
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
+  ]
 }
